<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="nav_movie_title">Movie</string>
    <string name="nav_title_tv_show">TV Show</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="background_rating">background rating</string>
    <string name="dummy_title">A Star is Born</string>
    <string name="dummy_date">12 December 2018</string>
    <string name="dummy_desc">Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</string>
    <string name="dummy_rating">7.5</string>
    <string name="dummy_genre">Drama, Music, Romance</string>
    <string name="persen">%</string>
    <string name="poster">poster</string>
    <string name="curve">curve</string>
    <string name="overview">Overview</string>
    <string name="icon_star">icon star</string>
    <string-array name="data_film_title">
        <item>A Star is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity Wars</item>
        <item>Bohemian Rhapsody</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: Crimes of Grindelwald</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Glass</item>
        <item>Robin Hood</item>
        <item>Spiderman: Into the Spiderverse</item>
    </string-array>
    <string-array name="data_film_rating">
        <item>75</item>
        <item>68</item>
        <item>83</item>
        <item>81</item>
        <item>67</item>
        <item>69</item>
        <item>77</item>
        <item>65</item>
        <item>58</item>
        <item>84</item>
    </string-array>
    <string-array name="data_film_genre">
        <item>Drama, Romance, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Drama, Music</item>
        <item>Drama</item>
        <item>Adventures</item>
        <item>Fantasy, Adventure, Animation, Family</item>
        <item>Thriller, Drama, Science Fiction</item>
        <item>Adventure, Action, Thriller</item>
        <item>Fantasy, Adventure, Animation, Comedy, Science Fiction</item>
    </string-array>
    <string-array name="data_film_description">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family\'s past, Adonis Creed is up against the challenge of his life.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>As the son of a Viking leader on the cusp of manhood, shy Hiccup Horrendous Haddock III faces a rite of passage: he must kill a dragon to prove his warrior mettle. But after downing a feared dragon, he realizes that he no longer wants to destroy it, and instead befriends the beast – which he names Toothless – much to the chagrin of his warrior father</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
    </string-array>
    <string-array name="data_film_poster">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_crimes</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_robin_hood</item>
        <item>@drawable/poster_spiderman</item>
    </string-array>
    <string-array name="data_film_release">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>October 24, 2018</item>
        <item>November 21, 2018</item>
        <item>November 14, 2018</item>
        <item>January 3, 2018</item>
        <item>January 16, 2019</item>
        <item>November 20, 2018</item>
        <item>December 6, 2018</item>
    </string-array>
    <string-array name="data_tv_show_title">
        <item>Arrow</item>
        <item>Dragon Ball</item>
        <item>Family Guy</item>
        <item>Flash</item>
        <item>Gotham</item>
        <item>Marvels Iron Fist</item>
        <item>Naruto Shippuden</item>
        <item>Shameless</item>
        <item>Supergirl</item>
        <item>The Simpsons</item>
    </string-array>
    <string-array name="data_tv_show_rating">
        <item>58</item>
        <item>79</item>
        <item>65</item>
        <item>67</item>
        <item>68</item>
        <item>61</item>
        <item>75</item>
        <item>78</item>
        <item>58</item>
        <item>71</item>
    </string-array>
    <string-array name="data_tv_show_genre">
        <item>Crime, Drama, Mystery, Action, Adventuru</item>
        <item>Sci-fi, Fantasy, Animation, Comedy, Action, Adventure</item>
        <item>Animation, Comedy</item>
        <item>Drama, Sci-fi, Fantasy</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Action, Adventure, Crime, Drama, Sci-fi, Fantasy</item>
        <item>Animation, Comedy, Drama</item>
        <item>Drama, Comedy</item>
        <item>Action, Adventure, Drama, Sci-fi</item>
        <item>Animation, Comedy</item>
    </string-array>
</resources>